--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,3 @@
-
-
 body { 
   padding-top: 70px; 
   padding-bottom: 0px; 
@@ -90,7 +88,7 @@ a:active {
   padding: 5em;
   margin-bottom: 0;
   color: #fff; 
-  background-image: url("http://www.persource.com/wp-content/uploads/2014/02/deskcoffeeipad.jpg");
+  background-image: url('../images/deskcoffeeipad.jpg');
   background-position: 100% 50%;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -202,7 +200,7 @@ a:active {
 
 #imageFooter {
   height: 100px;
-  background-image: url("http://www.persource.com/wp-content/uploads/2014/02/deskcoffeeipad.jpg");
+  background-image: url('../images/deskcoffeeipad.jpg');
   background-position: 100% 50%;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -219,4 +217,3 @@ a:active {
   letter-spacing: 2px;
   font-family: cursive, sans-serif;
 }
-
